--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
       <div class="ml-auto"><img src="./media/logo.jpg" alt="logo" class="w-10 md:w-16 lg:w-24 rounded-full"></div>
     </header>
     
-    <main class="grid grid-cols-12 gap-2 pt-40">
-      <div class="col-start-1 col-span-2 ml-4 h-[60vh] pt-40">
-        <ul class="text-3xl text-[#02024d] font-semibold flex-col justify-between">
+    <main class="grid grid-cols-1 md:grid-cols-12 gap-2 pt-20 md:pt-40">
+      <div class="col-span-1 md:col-span-2 ml-4 h-auto md:h-[60vh] pt-10 md:pt-40">
+        <ul class="text-2xl md:text-3xl text-[#02024d] font-semibold flex flex-col space-y-4 md:space-y-6">
           <li><a href="">about me</a></li>
           <li><a href="">painting</a></li>
           <li><a href="">photography</a></li>
           <li><a href="">exhibitions</a></li>
         </ul>
       </div>
-      <div class="col-start-3 col-span-10">
-        <div class="bg-[url(/media/bg.png)] bg-cover h-[60vh] pt-40">
-          <p class="mr-auto ml-4 text-left text-4xl text-[#02024d]"><em>"Mes yeux se ferment <br> pour voir sans comprendre <br> le rêve dans l'espace infini <br> qui fuit devant moi."</em></p>
-          <p class="ml-auto mr-4 text-right text-3xl text-[#02024d]">Paul Gauguin, 1899</p>
+      <div class="col-span-1 md:col-span-10">
+        <div class="bg-[url(/media/bg.png)] bg-cover h-[40vh] md:h-[60vh] pt-20 md:pt-40">
+          <p class="mr-auto ml-4 text-left text-2xl md:text-4xl text-[#02024d]"><em>"Mes yeux se ferment <br> pour voir sans comprendre <br> le rêve dans l'espace infini <br> qui fuit devant moi."</em></p>
+          <p class="ml-auto mr-4 text-right text-xl md:text-3xl text-[#02024d]">Paul Gauguin, 1899</p>
         </div>
-        <div class="mt-4">
-          <h1 class="text-4xl text-[#02024d] font-semibold">about me</h1>
-          <p>Hi everyone! My name is Fenareti. I love painting and photography and I use these mediums as a way to express myself and connect with the world. I grew up in a family with strong artistic interests I' ve always beem surrounded by creativity which has deeply influenced my work and inspired my artistic journey. <br>
+        <div class="mt-4 px-4 md:px-0">
+          <h1 class="text-3xl md:text-4xl text-[#02024d] font-semibold">about me</h1>
+          <p class="text-lg md:text-xl mt-2">Hi everyone! My name is Fenareti. I love painting and photography and I use these mediums as a way to express myself and connect with the world. I grew up in a family with strong artistic interests I' ve always beem surrounded by creativity which has deeply influenced my work and inspired my artistic journey. <br>
             I studied at the Univercity of Ioannina in Greece at th Department of Fine Arts and Arts Sciences. "The Department of Fine Arts and Sciences of Art [...] offers expertise in the fields of Fine Arts, History and Theory of Art, Painting and Sculpture including Printmaking, analogue and digital Photography, Computer Animation, Video and Multimedia." <br>
             After graduating I 've been exploring various tecniques, always experimenting with new styles, materials and ideas. For me, art is a journey of learning, evolving, and broadening my horizons. I’m always excited to push boundaries and discover new ways to bring my vision to life.</p>
-          <img src="./media/aboutme.jpg" alt="" class="h-[60vh]">
+          <img src="./media/aboutme.jpg" alt="" class="h-[40vh] md:h-[60vh] w-full object-cover mt-4">
         </div>
-        <div class="mt-4">
-          <h1 class="text-4xl text-[#02024d] font-semibold">painting</h1>
+        <div class="mt-4 px-4 md:px-0">
+          <h1 class="text-3xl md:text-4xl text-[#02024d] font-semibold">painting</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quo rem tempore exercitationem laborum quibusdam quas vitae numquam voluptates reiciendis animi repudiandae, quasi sunt dolore, consequatur totam ullam. Illum, modi.</p>
           <div class="grid grid-cols-2 gap-4 md:grid-cols-4">
             <div class="grid gap-4">
@@ -126,8 +126,8 @@
             </div>
           </div>
         </div>
-        <div class="mt-4">
-          <h1 class="text-4xl text-[#02024d] font-semibold">photography</h1>
+        <div class="mt-4 px-4 md:px-0">
+          <h1 class="text-3xl md:text-4xl text-[#02024d] font-semibold">photography</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sint eveniet dignissimos ipsa neque, nobis ea porro laborum ipsam ab! Quam quaerat nam esse architecto dignissimos dolore, expedita cum odio.</p>
           
           <div class="grid grid-cols-2 gap-4 md:grid-cols-4">
@@ -217,8 +217,8 @@
             </div>
           </div>
         </div>
-        <div class="mt-4">
-          <h1 class="text-4xl text-[#02024d] font-semibold">exhibitions</h1>
+        <div class="mt-4 px-4 md:px-0">
+          <h1 class="text-3xl md:text-4xl text-[#02024d] font-semibold">exhibitions</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, fuga ducimus molestias alias provident atque beatae. Ipsam obcaecati praesentium quisquam neque vero incidunt dolor eveniet tempore dignissimos, totam ut autem.</p>
           <div class="grid grid-cols-2 gap-4 md:grid-cols-4">
             <div class="grid gap-4">
