portfolio first try

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>project f</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./style.css">
+  
 </head>
 <body class="bg-[#fce6ce] font-mono" >
-  <container class="relative">
+  <div class="relative">
     <header class="flex justify between items-center fixed top-0 left-0 w-full z-10 bg-[#fce6ce]">
       <div class="text-center sm:text-left text-5xl text-[#02024d] my-auto ml-4 font-display font-black">Fenareti Peristeri</div>
       <div class="ml-auto"><img src="./media/logo.jpg" alt="logo" class="w-10 md:w-16 lg:w-24 rounded-full"></div>
@@ -22,6 +22,7 @@
           <li><a href="">painting</a></li>
           <li><a href="">photography</a></li>
           <li><a href="">exhibitions</a></li>
+          <li><a href="./portfolio.html">portfolio</a></li>
         </ul>
       </div>
       <div class="col-span-1 md:col-span-10">
@@ -318,7 +319,7 @@
       </div>
       <div><span class="font-light tracking-wide mt-4"><i class="fa-regular fa-copyright pr-1"></i>2025 FENARETI PERISTERI. All rights reserved.</span></div>
     </footer>
-  </container>
+  </div>
   <script src="./index.js"></script>
 </body>
 </html>
